src/components/App/styles.scss
:global(.guesser) {
  padding-left: 0px !important;
  padding-right: 0px !important;
  width: 100% !important;
}

:global(.Caption) {
  background: none !important;
}

.base {
  position: relative;
}

.base * {
  box-sizing: border-box;
}

.loader {
  position: absolute;
  top: 20px;
  left: 20px;
}

.options {
  .otherButtons {
    text-align: center;

    & > button {
      margin: 0 5px;
    }
  }

  .leftButton,
  .rightButton,
  .bothButton {
    position: absolute;
    top: 0px;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .leftButton,
  .rightButton,
  .bothButton,
  .neitherButton {
    font-size: 16px;
    line-height: 38px;
    padding: 0 18px;
    border: none;
    background: white;
    text-transform: uppercase;
    font-family: Arial, Helvetica, sans-serif;
    cursor: pointer;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    transition: all 0.3s ease;
    border-radius: 1px;

    &:hover {
      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
    }
  }

  @media screen and (max-device-width: 499px) {
    .leftButton,
    .rightButton,
    .bothButton,
    .neitherButton {
      font-size: 14px;
      line-height: 36px;
      padding: 0 14px;
    }
  }

  @media screen and (min-device-width: 500px) {
    .leftButton {
      left: 10px;
      transform: translate(0, 0);
    }

    .rightButton {
      left: initial;
      right: 10px;
      transform: translate(0, 0);
    }

    .bothButton {
      transform: translate(-50%, 0);
    }
  }

  .neitherButtonWrapper {
    text-align: center;
  }
}

.results {
  .leftResult,
  .rightResult,
  .bothResult {
    position: absolute;
    top: 0px;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 40%;
  }

  @media screen and (max-device-width: 499px) {
    .leftResult,
    .rightResult,
    .bothResult,
    .neitherResult {
      width: 80%;
      margin: auto;
    }
  }

  @media screen and (min-device-width: 500px) {
    .leftResult {
      left: 25%;
    }

    .rightResult {
      left: 75%;
    }

    .neitherResult {
      width: 40%;
      margin: auto;
    }
  }
}

